--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "necklace_matching"
+name = "daily_programmer"
 version = "0.1.0"
 authors = ["Grant Horner <h.grant.horner@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 quickcheck = "0.9"
 quickcheck_macros = "0.9"
